fix : update getRecord API
기존 drinkId, date를 받던 것에서 recordId만 받는 것으로 수정하였습니다.
해당 기록의 주류에 대한 미리보기와 (용량, 개수) 리스트를 응답합니다.